app/src/main/java/com/example/architecture/bad/myfigurecollection/bestpictures/BestPicturesActivity.java
package com.example.architecture.bad.myfigurecollection.bestpictures;

import android.support.v7.app.AppCompatActivity;

import com.example.architecture.bad.myfigurecollection.BaseActivity;
import com.example.architecture.bad.myfigurecollection.util.ActivityUtils;

public class BestPicturesActivity extends AppCompatActivity {



}
